# django_sprint4

./: .djlintrc  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml  setup.cfg
blogicum/: manage.py
blogicum/apps/blog/: admin.py  forms.py  mixins.py  models.py  urls.py  validators.py  views.py
blogicum/apps/blog/migrations/: 0001_initial.py  0002_auto_20240514_1533.py  0003_auto_20240515_1037.py  0004_alter_post_options.py  0005_auto_20240516_1016.py  0006_auto_20240516_1039.py  0007_post_image.py  0008_comment.py  0009_auto_20240619_0842.py  0010_alter_comment_options.py
blogicum/apps/core/: models.py  views.py
blogicum/apps/pages/: views.py
blogicum/blogicum/: asgi.py  settings.py  urls.py  wsgi.py
blogicum/static_dev/css/: style.css
blogicum/templates/: base.html
blogicum/templates/blog/: category.html  detail.html  index.html
blogicum/templates/includes/: header.html  nav-item.html  post_card.html
blogicum/templates/pages/: rules.html
