[tool.poetry]
name = "blogicum"
version = "0.1.0"
description = "YaPraktikum Backend Developer Sprint 4 project"
authors = ["NovaHFly <mugiviska@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.16"
django-bootstrap5 = "22.2"
django-debug-toolbar = "3.8.1"
beautifulsoup4 = "4.11.2"
attrs = "22.2.0"
asgiref = "3.5.2"
iniconfig = "2.0.0"
packaging = "23.0"
pillow = "9.3.0"
pluggy = "1.0.0"
python-dateutil = "2.8.2"
pytz = "2022.7"
six = "1.16.0"
sqlparse = "0.4.3"
tomli = "2.0.1"
yapf = "0.32.0"


[tool.poetry.group.test.dependencies]
mixer = "7.2.2"
pytest = "7.1.3"
pytest-django = "4.5.2"


[tool.poetry.group.code-quality.dependencies]
pep8-naming = "0.13.3"
flake8 = "5.0.4"
flake8-docstrings = "1.7.0"
ruff = "^0.4.4"
djlint = "^1.34.1"
mypy = "^1.10.0"
mccabe = "0.7.0"
pycodestyle = "2.9.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
